finish XML mapping of graph database. TODO: Annotation mapping support.