@@ -1,7 +1,5 @@
 package com.rsh.easy_opm.reflection;
 
-import com.rsh.easy_opm.error.AssertError;
-
 import java.lang.reflect.Field;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -9,48 +7,35 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
-public class RdReflectionUtil implements ReflectionUtil{
-    private final String resultType;
-    private final Map<String, String> resultMap;
-    private final ResultSet resultSet;
-    private final String unionOfType;
+public class RdReflectionUtil extends ReflectionUtil{
 
-    public RdReflectionUtil(String resultType, String unionOfType, Map<String, String> resultMap, ResultSet resultSet) {
+    public RdReflectionUtil(String resultType, String unionOfType, Map<String, String> resultMap) {
         this.resultType = resultType;
         this.resultMap = resultMap;
-        this.resultSet = resultSet;
         this.unionOfType = unionOfType;
     }
 
-    public Object convertToBean() {
-        try {
-            Object basicType = convertToBasicBean(resultType);
-            if (basicType != null)
-                return basicType;
-
-            return convertToEntityBean();
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return null;
-    }
-
     @SuppressWarnings("unchecked")
-    private <T> Object convertToEntityBean()throws Exception{
+    <T> Object convertToEntityBean(Object result) throws Exception {
+        if (iterateNumExceed(resultType))
+            return null;
+
         boolean entityNotNull = false;
+
         Class<T> entityClass = (Class<T>) Class.forName(resultType);
-        T entity = (T) entityClass.newInstance();
+        T entity = entityClass.getConstructor().newInstance();
         Field[] declaredFields = entityClass.getDeclaredFields();
         for (Field field : declaredFields) {
             String fieldName = field.getName();
             String mappedName = mapResult(fieldName);
-            if (setField(field, mappedName, entity))
+            if (setField(field, mappedName, entity, result))
                 entityNotNull = true;
         }
         return entityNotNull ? entity : null;
     }
 
-    private Object convertToBasicBean(String type) throws SQLException{
+    Object convertToBasicBean(String type, Object result) throws SQLException{
+        ResultSet resultSet = (ResultSet) result;
         switch (type){
             case "String":
                 return resultSet.getString(0);
@@ -85,13 +70,8 @@ public class RdReflectionUtil implements ReflectionUtil{
         }
     }
 
-    private String mapResult(String fieldName) {
-        if (resultMap == null)
-            return fieldName;
-        return resultMap.getOrDefault(fieldName, fieldName);
-    }
-
-    private boolean existColumn(String columnName) {
+    boolean existColumn(String columnName, Object result) {
+        ResultSet resultSet = (ResultSet) result;
         try {
             if (resultSet.findColumn(columnName) > 0) {
                 return true;
@@ -101,8 +81,8 @@ public class RdReflectionUtil implements ReflectionUtil{
         }
         return false;
     }
-
-    private <T> boolean setField(Field field, String mappedName, T entity) throws Exception {
+    <T> boolean setField(Field field, String mappedName, T entity, Object result) throws Exception{
+        ResultSet resultSet = (ResultSet) result;
         field.setAccessible(true);
 
         // do not set the field if not existing in resultSet
@@ -110,69 +90,69 @@ public class RdReflectionUtil implements ReflectionUtil{
         boolean haveSet = false;
         switch (fieldType) {
             case "Date":
-                if (existColumn(mappedName)) {
+                if (existColumn(mappedName, result)) {
                     haveSet = true;
                     field.set(entity, resultSet.getDate(mappedName));
                 }
                 break;
             case "String":
-                if (existColumn(mappedName)) {
+                if (existColumn(mappedName, result)) {
                     haveSet = true;
                     field.set(entity, resultSet.getString(mappedName));
                 }
                 break;
             case "Integer":
             case "int":
-                if (existColumn(mappedName)) {
+                if (existColumn(mappedName, result)) {
                     haveSet = true;
                     field.set(entity, resultSet.getInt(mappedName));
                 }
                 break;
             case "Boolean":
             case "boolean":
-                if (existColumn(mappedName)) {
+                if (existColumn(mappedName, result)) {
                     haveSet = true;
                     field.set(entity, resultSet.getBoolean(mappedName));
                 }
                 break;
             case "Float":
             case "float":
-                if (existColumn(mappedName)) {
+                if (existColumn(mappedName, result)) {
                     haveSet = true;
                     field.set(entity, resultSet.getFloat(mappedName));
                 }
                 break;
             case "Character":
             case "char":
-                if (existColumn(mappedName)) {
+                if (existColumn(mappedName, result)) {
                     haveSet = true;
                     field.set(entity, resultSet.getString(mappedName).charAt(0));
                 }
                 break;
             case "Byte":
             case "byte":
-                if (existColumn(mappedName)) {
+                if (existColumn(mappedName, result)) {
                     haveSet = true;
                     field.set(entity, resultSet.getByte(mappedName));
                 }
                 break;
             case "Short":
             case "short":
-                if (existColumn(mappedName)) {
+                if (existColumn(mappedName, result)) {
                     haveSet = true;
                     field.set(entity, resultSet.getShort(mappedName));
                 }
                 break;
             case "Long":
             case "long":
-                if (existColumn(mappedName)) {
+                if (existColumn(mappedName, result)) {
                     haveSet = true;
                     field.set(entity, resultSet.getLong(mappedName));
                 }
                 break;
             case "Double":
             case "double":
-                if (existColumn(mappedName)) {
+                if (existColumn(mappedName, result)) {
                     haveSet = true;
                     field.set(entity, resultSet.getDouble(mappedName));
                 }
@@ -180,7 +160,7 @@ public class RdReflectionUtil implements ReflectionUtil{
             default:
                 // when the field type is the child class of Collection, set Collection Class to the field
                 if (List.class.isAssignableFrom(field.getType())) {
-                    Object entityValue = setEntity(unionOfType);
+                    Object entityValue = setEntity(unionOfType, result);
                     List<Object> entityList = new ArrayList<>();
                     if (entityValue != null) {
                         haveSet = true;
@@ -188,7 +168,7 @@ public class RdReflectionUtil implements ReflectionUtil{
                         field.set(entity, entityList);
                     }
                 } else {
-                    T entityValue = setEntity(field.getType().getName());
+                    T entityValue = setEntity(field.getType().getName(), result);
                     if (entityValue != null) {
                         haveSet = true;
                         field.set(entity, entityValue);
@@ -199,16 +179,19 @@ public class RdReflectionUtil implements ReflectionUtil{
     }
 
     @SuppressWarnings("unchecked")
-    private <T> T setEntity(String classType) {
+    <T> T setEntity(String classType, Object result) {
         boolean entityNotNull = false;
         try {
+            if (iterateNumExceed(classType))
+                return null;
+
             Class<T> entityClass = (Class<T>) Class.forName(classType);
-            T entity = (T) entityClass.newInstance();
+            T entity = entityClass.getConstructor().newInstance();
             Field[] declaredFields = entityClass.getDeclaredFields();
             for (Field field : declaredFields) {
                 String fieldName = field.getName() + '@' + classType;
                 String mappedName = mapResult(fieldName);
-                if (setField(field, mappedName, entity))
+                if (setField(field, mappedName, entity, result))
                     entityNotNull = true;
             }
             return entityNotNull ? entity : null;
